Adjust weights and values

--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -30,10 +30,10 @@
      "output_type": "stream",
      "text": [
       "  Name  Weight  Value       address_line_1                          city  postcode   latitude  longitude\n",
-      "0    0     4.3      3    15 St Marys Close            North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
-      "1    1     4.6      4           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
-      "2    2     4.4      4  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
-      "3    3     7.4      4         6 Gala Drive                        Slough   SL1 5UB  51.510894  -0.644514\n"
+      "0    0     9.1      6    15 St Marys Close            North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
+      "1    1     5.4      3           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
+      "2    2     4.6      2  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
+      "3    3     4.6      6         6 Gala Drive                        Slough   SL1 5UB  51.510894  -0.644514\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
     "    })\n",
     "\n",
     "df_addresses = pd.read_csv(\"full_addresses.csv\")\n",
-    "df = generate_weights_and_values(len(df_addresses), (2, 10), (1, 5 + 1))\n",
+    "df = generate_weights_and_values(len(df_addresses), (4, 10), (1, 10 + 1))\n",
     "df = df.join(df_addresses)\n",
     "df_20 = df.head(20)\n",
     "\n",
@@ -336,24 +336,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total weight: 28.8. Total value: 29\n",
+      "Total weight: 29.8. Total value: 40\n",
       "\n",
-      "   Name  Weight  Value       address_line_1                          city  postcode   latitude  longitude\n",
-      "1     1     4.6      4           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
-      "2     2     4.4      4  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
-      "8     8     2.9      3     5 Stryd Llewelyn                     Guildford  GU12 5EH  51.261701  -0.721138\n",
-      "9     9     5.5      4       4 Queens Grove                     Maidstone  ME15 9DU  51.244976   0.551896\n",
-      "11   11     2.4      1          4 Viewlands                        Sefton   PR8 3TF  53.595472  -3.044394\n",
-      "16   16     2.4      4        203 Grangeway                    Nottingham   NG5 2JR  52.980847  -1.147772\n",
-      "17   17     4.2      5        49 Kingscroft                  East Suffolk  IP17 3DL  52.272931   1.622348\n",
-      "19   19     2.4      4          2 Lych Gate                     Sheffield   S35 2EP  53.466005  -1.475101\n"
+      "   Name  Weight  Value                address_line_1                   city  postcode   latitude  longitude\n",
+      "3     3     4.6      6                  6 Gala Drive                 Slough   SL1 5UB  51.510894  -0.644514\n",
+      "4     4     5.5      6          Highways, Broad Lane       Stockton-on-Tees  TS16 9HJ  54.520799  -1.347180\n",
+      "12   12     9.1     10            34 Goldring Avenue             Sunderland   DH5 9FR  54.826545  -1.463713\n",
+      "13   13     5.2     10  1 The Mews, 17 Brookley Road              Redbridge   IG8 0UQ  51.609789   0.021329\n",
+      "18   18     5.4      8      Hughfield, Burradon Road  Basingstoke and Deane  RG21 7SG  51.265373  -1.098130\n"
      ]
     }
    ],
