Fix random seed

--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reset_random():\n",
+    "    random.seed(42)\n",
+    "    np.random.seed(42)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -30,15 +41,16 @@
      "output_type": "stream",
      "text": [
       "  Name  Weight  Value       address_line_1                          city  postcode   latitude  longitude\n",
-      "0    0     9.1      6    15 St Marys Close            North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
-      "1    1     5.4      3           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
-      "2    2     4.6      2  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
-      "3    3     4.6      6         6 Gala Drive                        Slough   SL1 5UB  51.510894  -0.644514\n"
+      "0    0     6.2      8    15 St Marys Close            North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
+      "1    1     9.7      4           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
+      "2    2     8.4      1  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
+      "3    3     7.6      8         6 Gala Drive                        Slough   SL1 5UB  51.510894  -0.644514\n"
      ]
     }
    ],
    "source": [
     "def generate_weights_and_values(num_items, weight_range, value_range):\n",
+    "    reset_random()\n",
     "    weights = np.round(np.random.uniform(*weight_range, num_items), 1)\n",
     "    values = np.random.randint(*value_range, num_items)\n",
     "    return pd.DataFrame({\n",
@@ -71,11 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "def genetic_algorithm(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=0.5):\n",
+    "    reset_random()\n",
     "    weights = df[\"Weight\"].tolist()\n",
     "    values = df[\"Value\"].tolist()\n",
     "    n = len(values)\n",
@@ -133,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,28 +162,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: 2, 6, 8, 9, 16, 17, 19\n",
-      "Total weight: 28.4\n",
-      "Total value: 29\n",
+      "Items: 0, 4, 6, 9, 15\n",
+      "Total weight: 28.7\n",
+      "Total value: 35\n",
       "\n",
-      "Items: 1, 2, 6, 8, 11, 16, 17, 19\n",
-      "Total weight: 29.9\n",
-      "Total value: 30\n",
+      "Items: 0, 4, 6, 9, 15\n",
+      "Total weight: 28.7\n",
+      "Total value: 35\n",
       "\n",
-      "Items: 1, 2, 6, 8, 11, 16, 17, 19\n",
-      "Total weight: 29.9\n",
-      "Total value: 30\n",
+      "Items: 0, 4, 6, 9, 15\n",
+      "Total weight: 28.7\n",
+      "Total value: 35\n",
       "\n",
-      "Items: 1, 6, 8, 9, 16, 17, 19\n",
-      "Total weight: 28.6\n",
-      "Total value: 29\n",
+      "Items: 0, 4, 6, 9, 15\n",
+      "Total weight: 28.7\n",
+      "Total value: 35\n",
       "\n"
      ]
     }
@@ -181,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "435 ms ± 28.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "452 ms ± 30.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -205,12 +218,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Rewrite using numpy\n",
     "def genetic_algorithm(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=0.5):\n",
+    "    reset_random()\n",
     "    weights = df[\"Weight\"].to_numpy()\n",
     "    values = df[\"Value\"].to_numpy()\n",
     "    n = len(values)\n",
@@ -261,15 +275,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200 ms ± 3.04 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "2.14x faster\n"
+      "197 ms ± 3.08 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "2.05x faster\n"
      ]
     }
    ],
@@ -288,25 +302,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mutation rate: 0      Max weight: 30.0  Average value: 37.0\n",
-      "Mutation rate: 0.001  Max weight: 29.8  Average value: 40.0\n",
-      "Mutation rate: 0.005  Max weight: 30.0  Average value: 39.2\n",
-      "Mutation rate: 0.01   Max weight: 30.0  Average value: 39.0\n",
-      "Mutation rate: 0.05   Max weight: 30.0  Average value: 38.7\n",
-      "Mutation rate: 0.1    Max weight: 29.9  Average value: 40.5\n",
-      "Mutation rate: 0.5    Max weight: 29.8  Average value: 48.1\n",
-      "Mutation rate: 1      Max weight: 29.9  Average value: 44.2\n",
-      "Mutation rate: 5      Max weight: 616.8  Average value: 290.8\n",
-      "Mutation rate: 10     Max weight: 662.1  Average value: 309.3\n",
-      "Mutation rate: 50     Max weight: 617.8  Average value: 315.6\n",
-      "Mutation rate: 100    Max weight: 645.8  Average value: 316.9\n"
+      "Mutation rate: 0      Max weight: 29.1  Average value: 45.0\n",
+      "Mutation rate: 0.001  Max weight: 29.1  Average value: 45.0\n",
+      "Mutation rate: 0.005  Max weight: 29.1  Average value: 45.0\n",
+      "Mutation rate: 0.01   Max weight: 29.1  Average value: 45.0\n",
+      "Mutation rate: 0.05   Max weight: 30.0  Average value: 50.0\n",
+      "Mutation rate: 0.1    Max weight: 29.8  Average value: 46.0\n",
+      "Mutation rate: 0.5    Max weight: 30.0  Average value: 46.0\n",
+      "Mutation rate: 1      Max weight: 29.7  Average value: 51.0\n",
+      "Mutation rate: 5      Max weight: 544.6  Average value: 427.0\n",
+      "Mutation rate: 10     Max weight: 629.2  Average value: 459.0\n",
+      "Mutation rate: 50     Max weight: 700.8  Average value: 522.0\n",
+      "Mutation rate: 100    Max weight: 735.7  Average value: 562.0\n"
      ]
     }
    ],
@@ -336,21 +350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total weight: 29.8. Total value: 40\n",
+      "Total weight: 27.6. Total value: 37\n",
       "\n",
-      "   Name  Weight  Value                address_line_1                   city  postcode   latitude  longitude\n",
-      "3     3     4.6      6                  6 Gala Drive                 Slough   SL1 5UB  51.510894  -0.644514\n",
-      "4     4     5.5      6          Highways, Broad Lane       Stockton-on-Tees  TS16 9HJ  54.520799  -1.347180\n",
-      "12   12     9.1     10            34 Goldring Avenue             Sunderland   DH5 9FR  54.826545  -1.463713\n",
-      "13   13     5.2     10  1 The Mews, 17 Brookley Road              Redbridge   IG8 0UQ  51.609789   0.021329\n",
-      "18   18     5.4      8      Hughfield, Burradon Road  Basingstoke and Deane  RG21 7SG  51.265373  -1.098130\n"
+      "   Name  Weight  Value      address_line_1                city  postcode   latitude  longitude\n",
+      "0     0     6.2      8   15 St Marys Close  North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
+      "5     5     4.9      6       24 Tulse Hill             Belfast   BT9 6RD  54.560791  -5.955564\n",
+      "6     6     4.3      8        6 Eglos View          Wandsworth  SW18 1UF  51.458106  -0.192737\n",
+      "15   15     5.1      6  151 Rose Hill Road             Norwich   NR1 3PS  52.620659   1.295188\n",
+      "17   17     7.1      9       49 Kingscroft        East Suffolk  IP17 3DL  52.272931   1.622348\n"
      ]
     }
    ],
