--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Name  Weight  Value       address_line_1                          city  postcode   latitude  longitude\n",
-      "0    0     6.2      8    15 St Marys Close            North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
-      "1    1     9.7      4           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
-      "2    2     8.4      1  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
-      "3    3     7.6      8         6 Gala Drive                        Slough   SL1 5UB  51.510894  -0.644514\n"
+      "   Weight  Value       address_line_1                          city  postcode   latitude  longitude\n",
+      "0     6.2      8    15 St Marys Close            North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
+      "1     9.7      4           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
+      "2     8.4      1  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
+      "3     7.6      8         6 Gala Drive                        Slough   SL1 5UB  51.510894  -0.644514\n"
      ]
     }
    ],
@@ -54,7 +54,6 @@
     "    weights = np.round(np.random.uniform(*weight_range, num_items), 1)\n",
     "    values = np.random.randint(*value_range, num_items)\n",
     "    return pd.DataFrame({\n",
-    "        'Name': [str(i) for i in range(num_items)],\n",
     "        'Weight': weights,\n",
     "        'Value': values\n",
     "    })\n",
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +153,7 @@
     "                           population_size=100, num_generations=50, mutation_rate=0.2):\n",
     "    for _ in range(n_runs):\n",
     "        items, value, weight = genetic_algorithm(df, population_size=population_size, num_generations=num_generations, mutation_rate=mutation_rate)\n",
-    "        print(f\"Items: {', '.join(items['Name'].tolist())}\")\n",
+    "        print(f\"Items: {', '.join(map(str, items.index.tolist()))}\")\n",
     "        print(f\"Total weight: {weight:.1f}\")\n",
     "        print(f\"Total value: {value}\")\n",
     "        print()\n"
@@ -162,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -194,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "452 ms ± 30.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "414 ms ± 10.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,15 +274,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "197 ms ± 3.08 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "2.05x faster\n"
+      "200 ms ± 11.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "2.10x faster\n"
      ]
     }
    ],
@@ -302,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -359,12 +358,12 @@
      "text": [
       "Total weight: 27.6. Total value: 37\n",
       "\n",
-      "   Name  Weight  Value      address_line_1                city  postcode   latitude  longitude\n",
-      "0     0     6.2      8   15 St Marys Close  North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
-      "5     5     4.9      6       24 Tulse Hill             Belfast   BT9 6RD  54.560791  -5.955564\n",
-      "6     6     4.3      8        6 Eglos View          Wandsworth  SW18 1UF  51.458106  -0.192737\n",
-      "15   15     5.1      6  151 Rose Hill Road             Norwich   NR1 3PS  52.620659   1.295188\n",
-      "17   17     7.1      9       49 Kingscroft        East Suffolk  IP17 3DL  52.272931   1.622348\n"
+      "    Weight  Value      address_line_1                city  postcode   latitude  longitude\n",
+      "0      6.2      8   15 St Marys Close  North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
+      "5      4.9      6       24 Tulse Hill             Belfast   BT9 6RD  54.560791  -5.955564\n",
+      "6      4.3      8        6 Eglos View          Wandsworth  SW18 1UF  51.458106  -0.192737\n",
+      "15     5.1      6  151 Rose Hill Road             Norwich   NR1 3PS  52.620659   1.295188\n",
+      "17     7.1      9       49 Kingscroft        East Suffolk  IP17 3DL  52.272931   1.622348\n"
      ]
     }
    ],
