Use consistent capitalisation

--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Weight  Value       address_line_1                          city  postcode   latitude  longitude\n",
+      "   weight  value       address_line_1                          city  postcode   latitude  longitude\n",
       "0     6.2      8    15 St Marys Close            North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
       "1     9.7      4           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
       "2     8.4      1  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
@@ -54,8 +54,8 @@
     "    weights = np.round(np.random.uniform(*weight_range, num_items), 1)\n",
     "    values = np.random.randint(*value_range, num_items)\n",
     "    return pd.DataFrame({\n",
-    "        'Weight': weights,\n",
-    "        'Value': values\n",
+    "        'weight': weights,\n",
+    "        'value': values\n",
     "    })\n",
     "\n",
     "df_addresses = pd.read_csv(\"full_addresses.csv\")\n",
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
     "def genetic_algorithm(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=0.5):\n",
     "    reset_random()\n",
-    "    weights = df[\"Weight\"].tolist()\n",
-    "    values = df[\"Value\"].tolist()\n",
+    "    weights = df[\"weight\"].tolist()\n",
+    "    values = df[\"value\"].tolist()\n",
     "    n = len(values)\n",
     "    \n",
     "    # Normalise mutations, so that longer lists dont become more mutated.\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -193,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "414 ms ± 10.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "415 ms ± 18 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -217,15 +217,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Rewrite using numpy\n",
     "def genetic_algorithm(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=0.5):\n",
     "    reset_random()\n",
-    "    weights = df[\"Weight\"].to_numpy()\n",
-    "    values = df[\"Value\"].to_numpy()\n",
+    "    weights = df[\"weight\"].to_numpy()\n",
+    "    values = df[\"value\"].to_numpy()\n",
     "    n = len(values)\n",
     "    \n",
     "    # Normalise mutations, so that longer lists dont become more mutated.\n",
@@ -274,15 +274,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200 ms ± 11.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "2.10x faster\n"
+      "218 ms ± 17.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "2.00x faster\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
      "text": [
       "Total weight: 27.6. Total value: 37\n",
       "\n",
-      "    Weight  Value      address_line_1                city  postcode   latitude  longitude\n",
+      "    weight  value      address_line_1                city  postcode   latitude  longitude\n",
       "0      6.2      8   15 St Marys Close  North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
       "5      4.9      6       24 Tulse Hill             Belfast   BT9 6RD  54.560791  -5.955564\n",
       "6      4.3      8        6 Eglos View          Wandsworth  SW18 1UF  51.458106  -0.192737\n",
