--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -37,18 +37,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   weight  value      address_line_1                  city  postcode   latitude  longitude\n",
-      "0     6.2      8       24 Tulse Hill              Trafford   M33 3QJ  53.415312  -2.323838\n",
-      "1     9.7      4  1 Stanley Cottages  Kingston upon Thames   KT1 2TW  51.401676  -0.299031\n",
-      "2     8.4      1   7 Ashburnham Road              Knowsley   L36 0UX  53.406642  -2.831767\n",
-      "3     7.6      8   17 Bordale Avenue                Rother  TN39 4HR  50.847934   0.457265\n"
+      "    weight  value                 address_line_1                   city  postcode   latitude  longitude\n",
+      "0      6.2      8                  24 Tulse Hill               Trafford   M33 3QJ  53.415312  -2.323838\n",
+      "1      9.7      4             1 Stanley Cottages   Kingston upon Thames   KT1 2TW  51.401676  -0.299031\n",
+      "2      8.4      1              7 Ashburnham Road               Knowsley   L36 0UX  53.406642  -2.831767\n",
+      "3      7.6      8              17 Bordale Avenue                 Rother  TN39 4HR  50.847934   0.457265\n",
+      "4      4.9      4                  3 Curlew Walk             Mid Sussex  RH17 6EG  51.040337  -0.184974\n",
+      "5      4.9      6  The Rectory, Westerfield Road              Wakefield   WF4 6AD  53.659867  -1.560271\n",
+      "6      4.3      8             50 Mendip Crescent         East Hampshire  GU10 5NH  51.187384  -0.887036\n",
+      "7      9.2      4             26 Timberley Drive             West Devon  PL19 9NS  50.579121  -4.098659\n",
+      "8      7.6      3                     4 Oaklands             Calderdale   HX7 8LG  53.747203  -2.011396\n",
+      "9      8.2      9                  3 Abbey House                  Wigan   WN2 5AJ  53.520594  -2.600502\n",
+      "10     4.1      3             Tunstall Farmhouse             Manchester    M3 2LF  53.482328  -2.248957\n",
+      "11     9.8      9                8 Gresley Close              Rotherham   S66 2PX  53.428795  -1.280254\n",
+      "12     9.0      2                 6 Catkin Close                  Leeds  LS14 3BL  53.872124  -1.451462\n",
+      "13     5.3      2            1 Willington Avenue     North Lincolnshire  DN20 8NY  53.543853  -0.494799\n",
+      "14     5.1      2             26 Town House Road             West Devon  PL19 9EF  50.533077  -4.130044\n",
+      "15     5.1      6                  60 North Side               Redditch   B98 0QF  52.301267  -1.882174\n",
+      "16     5.8      3              8 Cromwell Avenue             Chichester  PO18 0FN  50.862192  -0.686826\n",
+      "17     7.1      9               23 Castle Street             St. Helens   WN5 7LJ  53.499259  -2.703465\n",
+      "18     6.6      4   4 Railway Cottage, Ripe Lane  South Gloucestershire  GL12 8JA  51.631735  -2.402831\n",
+      "19     5.7      1                   2 Colne Bank                 Rother   TN5 7BP  51.046474   0.411217\n"
      ]
     }
    ],
@@ -67,7 +83,7 @@
     "df = df.join(df_addresses)\n",
     "df_20 = df.head(20)\n",
     "\n",
-    "print(df_20.head(4))"
+    "print(df_20)"
    ]
   },
   {
