--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -181,13 +181,7 @@
       "Items: 0, 4, 6, 9, 15\n",
       "Total weight: 28.7\n",
       "Total value: 35\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "Items: 0, 4, 6, 9, 15\n",
       "Total weight: 28.7\n",
       "Total value: 35\n",
@@ -209,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "457 ms ± 43 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "414 ms ± 9.25 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -233,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "209 ms ± 34.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "2.23x faster\n"
+      "195 ms ± 7.11 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "2.21x faster\n"
      ]
     }
    ],
@@ -317,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -398,8 +392,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GPS Visualisation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -439,8 +440,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Brute Force"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,21 +460,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def total_distance(perm):\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "def distances_matrix(points):\n",
+    "    n = len(points)\n",
+    "    distances = np.zeros((n, n))\n",
+    "    for i, p1 in enumerate(points):\n",
+    "        for j, p2 in enumerate(points[:i]):\n",
+    "            d = distance_between_two_points(p1, p2)\n",
+    "            distances[i, j] = d\n",
+    "            distances[j, i] = d\n",
+    "    return distances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def total_distance(perm, distances):\n",
     "    total = 0\n",
     "    n = len(perm)\n",
     "    for i in range(n):\n",
-    "        total += distance_between_two_points(perm[i], perm[(i + 1) % n]) \n",
+    "        total += distances[perm[i], perm[(i + 1) % n]]\n",
     "    return total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,21 +501,25 @@
     "\n",
     "def brute_force(points):\n",
     "    # O(n!) - very slow, but will find optimal solution\n",
+    "    # All of this is written in python so is also slow in that way\n",
+    "    distances = distances_matrix(points)\n",
     "    best_perm = None\n",
     "    best_dist = float('inf')\n",
     "\n",
-    "    for perm in permutations(points):\n",
-    "        dist = total_distance(perm)\n",
+    "    for perm in permutations(range(len(points))):\n",
+    "        dist = total_distance(perm, distances)\n",
     "        if dist < best_dist:\n",
     "            best_dist = dist\n",
     "            best_perm = perm\n",
-    "    return best_perm, best_dist\n",
+    "\n",
+    "    return (tuple(points[i] for i in best_perm),\n",
+    "            best_dist)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -570,8 +601,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nearest Neighbour"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -595,23 +633,24 @@
    ],
    "source": [
     "def nearest_neighbour(points):\n",
-    "    # There is no point precomputing distances\n",
     "    # O(n^2) - a lot faster, but not guaranteed to find optimal solution\n",
-    "    points = points.copy()\n",
+    "    distances = distances_matrix(points)\n",
     "    path_dist = 0\n",
-    "    path = [points.pop(0)]\n",
-    "    while points:\n",
+    "    indices = list(range(len(points)))\n",
+    "    path = [indices.pop(0)]\n",
+    "    while indices:\n",
     "        best_dist = float('inf')\n",
     "        best_i = -1\n",
-    "        for i, point in enumerate(points):\n",
-    "            dist = distance_between_two_points(path[-1], point)\n",
+    "        for i, j in enumerate(indices):\n",
+    "            dist = distances[path[-1], j]\n",
     "            if dist < best_dist:\n",
     "                best_dist = dist\n",
     "                best_i = i\n",
-    "        path.append(points.pop(best_i))\n",
+    "        path.append(indices.pop(best_i))\n",
     "        path_dist += best_dist\n",
-    "    path_dist += distance_between_two_points(path[0], path[-1])\n",
-    "    return tuple(path), path_dist\n",
+    "    path_dist += distances[path[0], path[-1]]\n",
+    "    return (tuple(points[i] for i in path),\n",
+    "            path_dist)\n",
     "\n",
     "nearest_neighbour_route, nearest_neighbour_dist = nearest_neighbour(points)\n",
     "print(nearest_neighbour_route)\n",
